<resources>
    <string name="app_name">AdAway</string>
    <string name="button_exit">Exit</string>
    <string name="button_apply">Download files and apply ad blocking</string>
    <string name="button_close">Close</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_revert">Disable ad blocking</string>
    <string name="button_add">Add</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_revert_text">Restores the default hosts file on your system.</string>
    <string name="button_save">Save</string>
    <string name="button_webserver_toggle_checked">Webserver is running</string>
    <string name="button_webserver_toggle_unchecked">Webserver is not running</string>
    <string name="button_webserver_toggle_text">Start or stop webserver on localhost to answer requests to blocked hostnames.</string>
    <string name="button_help">Help</string>
    <string name="button_tcpdump_text">Tcpdump is a tool to monitor DNS requests and save them in a log file. You can start it in the background, run applications that display ads, and afterwards analyze the DNS requests using the log file. Possible ad server can then be added to your blacklist.</string>
    <string name="button_tcpdump_toggle_checked">Tcpdump is running!</string>
    <string name="button_tcpdump_toggle_unchecked">Tcpdump is not running!</string>
    <string name="button_tcpdump_open">Open log file</string>
    <string name="button_tcpdump_delete">Delete log file</string>
    <string name="header_help">Welcome!</string>
    <string name="text_help">AdAway is a free and open-source software design to block advertising. It downloads ad network and configure your device to block them.\nWant to know more? Check the help below!</string>
    <string name="button_show_help">Show more help</string>
    <string name="icon_update_status">Update status</string>
    <string name="text_update">All hosts files from the defined sources are downloaded, merged with your own lists and installed as one hosts file on your system.</string>
    <string name="button_check_update_hosts">Check for updates</string>
    <string name="button_update_hosts">Update hosts</string>
    <string name="button_enable_hosts">Enable ad-blocking</string>
    <string name="button_disable_hosts">Disable ad-blocking</string>
    <string name="header_webserver">Web server</string>
    <string name="button_enable_webserver">Enable web server</string>
    <string name="button_disable_webserver">Disable web server</string>
    <string name="checkbox_list_add_dialog_title">Add</string>
    <string name="checkbox_list_empty">Empty list</string>
    <string name="checkbox_list_empty_text">You can add items from the plus button.</string>
    <string name="checkbox_list_context_delete">Delete</string>
    <string name="checkbox_list_footer">After adding new items to this list you have to apply AdAway again!</string>
    <string name="checkbox_list_edit_dialog_title">Edit</string>
    <string name="checkbox_list_context_title">Edit Entry</string>
    <string name="checkbox_list_context_edit">Edit</string>
    <string name="lists_tab_whitelist">Whitelist</string>
    <string name="lists_tab_blacklist">Blacklist</string>
    <string name="lists_tab_redirection_list">Redirections</string>
    <string name="list_dialog_url">URL:</string>
    <string name="list_dialog_hostname">Hostname:</string>
    <string name="list_dialog_whitelist_hostname">Hostname:\n(Wildcard characters * and ? are allowed!)</string>
    <string name="list_dialog_ip">IP (IPv4 or IPv6):</string>
    <string name="import_dialog">Importing…</string>
    <string name="export_dialog">Exporting…</string>
    <string name="export_success">Exported all entries to a file called \'adaway-export\' on your sdcard.</string>
    <string name="export_failed">Failed to export your list to your sdcard.</string>
    <string name="status_checking">Checking for update…</string>
    <string name="status_reverting">Reverting…</string>
    <string name="status_reverting_subtitle">Creating standard hosts file</string>
    <string name="status_checking_subtitle">Checking if update is available</string>
    <string name="status_update_available">Update available</string>
    <string name="status_update_available_subtitle">Newer hosts files available</string>
    <string name="status_no_connection">No Internet connection</string>
    <string name="status_no_connection_subtitle">No Internet connection available</string>
    <string name="status_download_fail">Unavailable sources</string>
    <string name="status_download_fail_subtitle_new">No hosts sources are reachable!</string>
    <string name="status_enabled">Enabled</string>
    <string name="status_enabled_subtitle">Newest hosts files enabled</string>
    <string name="status_disabled">Disabled</string>
    <string name="status_disabled_subtitle">Disabled</string>
    <string name="apply_symlink_missing">Symlink from your target to /system/etc/hosts is not existing or incorrect! AdAway will not work if it is not pointing to the right file.\n\nDo you want to try creating a symlink?</string>
    <string name="apply_symlink_missing_title">Symlink missing</string>
    <string name="apply_not_enough_space">Not enough space on the partition!\nTry changing the target hosts file in preferences to /data/data/hosts.</string>
    <string name="apply_not_enough_space_title">Not enough space</string>
    <string name="apply_private_file_fail">Downloaded file could not be read.</string>
    <string name="apply_private_file_fail_title">Private file fail</string>
    <string name="apply_remount_fail">Remounting the partition as read/write failed!</string>
    <string name="apply_remount_fail_title">Remount failed</string>
    <string name="apply_copy_fail">Copying of hosts file failed!</string>
    <string name="apply_copy_fail_title">Copy failed</string>
    <string name="apply_success_subtitle">Applied hosts sources:</string>
    <string name="apply_success_title">Applying successful</string>
    <string name="apply_success_dialog">Applying was successful.\nIt may be necessary to reboot Android for the changes to take effect.\n\nDo you want to reboot?\n(To prevent data loss make sure no app uses the sdcard at the moment!)</string>
    <string name="apply_symlink_successful">Symlink was created successful.\nIt may be necessary to reboot Android for the changes to take effect.\n\nDo you want to reboot?\n(To prevent data loss make sure no app uses the sdcard at the moment!)</string>
    <string name="apply_symlink_successful_title">Symlink creation successful</string>
    <string name="apply_symlink_fail">Symlink could not be created by Android.\nThis fails mostly due to a \'feature\' called S-ON on HTC phones!\n\nA solution is to boot your phone into recovery mode and create the symlink there with \'ln -s /data/data/hosts /system/etc/hosts\'.\n\nIf this does not work search the Internet for S-OFF and your phone.</string>
    <string name="apply_symlink_fail_title">Symlink creation failed</string>
    <string name="apply_help">Please read Help for more information.</string>
    <string name="apply_apn_proxy">A APN proxy is set on your Android!\nAdAway will not work reliably when on Mobile Networks like 3G. You can deactivate that proxy by going to your selected APN (On Android 4: Wireless and networks -> More… -> Mobile Networks -> Access Point Names) and remove the value in the proxy field.</string>
    <string name="apply_apn_proxy_title">APN proxy set!</string>
    <string name="no_connection">The connection to the Internet is not working.</string>
    <string name="no_connection_title">No Connection</string>
    <string name="download_dialog">Downloading…</string>
    <string name="apply_dialog">Applying…</string>
    <string name="apply_dialog_lists">Applying Blacklist and Whitelist</string>
    <string name="apply_dialog_hostnames">Parsing and merging hosts files</string>
    <string name="apply_dialog_hosts">Building hosts file</string>
    <string name="apply_dialog_apply">Applying hosts file</string>
    <string name="apply_fail">Applying the hosts file to your system failed!\nTry changing the target hosts file in preferences to /data/data/hosts.</string>
    <string name="apply_fail_title">Applying failed</string>
    <string name="revert_successful">You reverted to the default hosts file.\nIt may be necessary to reboot Android for the changes to take effect.\n\nDo you want to reboot?\n(To prevent data loss make sure no app uses the sdcard at the moment!) </string>
    <string name="revert_successful_title">Reverting successful</string>
    <string name="revert_problem">Reverting failed due to unknown reasons.</string>
    <string name="revert_problem_title">Reverting failed!</string>
    <string name="download_fail_dialog">None of your enabled hosts sources are reachable! Are you properly connected to the Internet?</string>
    <string name="download_fail_title">Download failed</string>
    <string name="no_private_file">Private file can not be created.</string>
    <string name="no_private_file_title">Private file creation failed</string>
    <string name="enable_systemless_successful">You enabled systemless mode.\nIt may be necessary to reboot Android for the changes to take effect.\n\nDo you want to reboot?\n(To prevent data loss make sure no app uses the sdcard at the moment!)</string>
    <string name="enable_systemless_successful_title">Enabling successful</string>
    <string name="disable_systemless_successful">You disabled systemless mode.\nIt may be necessary to reboot Android for the changes to take effect.\n\nDo you want to reboot?\n(To prevent data loss make sure no app uses the sdcard at the moment!)</string>
    <string name="disable_systemless_successful_title">Disabling successful</string>
    <string name="no_root_description">Either the su binary could not be found or you did not allow root permission for AdAway.\n\nThis can happen when your device is not rooted.\nYou can find information about how to root your device on wiki.lineageos.org or other Android websites.</string>
    <string name="no_root_title">Rooted Android required</string>
    <string name="no_url">This is not a valid URL!</string>
    <string name="no_url_title">Improperly formatted URL</string>
    <string name="hosts_add_dialog">Input URL to hosts file:</string>
    <string name="no_hostname">This is not a valid hostname!</string>
    <string name="no_hostname_title">Improperly formatted hostname</string>
    <string name="no_ip">This is not a valid IP!</string>
    <string name="no_ip_title">Improperly formatted IP</string>
    <string name="reboot_never_reboot">Never reboot and don\'t show this question next time!</string>
    <string name="loading">Loading…</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_add">Add</string>
    <string name="menu_hosts_sources">Hosts sources</string>
    <string name="menu_help">Help</string>
    <string name="menu_import">Import All Lists</string>
    <string name="menu_export">Export All Lists</string>
    <string name="help_tab_about">About</string>
    <string name="help_tab_donate">Donate</string>
    <string name="help_tab_s_on_s_off">S-ON/S-OFF</string>
    <string name="help_tab_faq">FAQ</string>
    <string name="help_tab_problems">Problems</string>
    <string name="help_tab_changelog">Changelog</string>
    <string name="scan_adware_description">Here you can scan for bad Adware applications, which can\'t be blocked by AdAway. These apps use for example Airpush notifications that pop up even when the app is not running or even change your ringtone. The only available countermeasure is to deinstall those apps by clicking on the list items!</string>
    <string name="scan_adware_start">Start scan</string>
    <string name="scan_adware_empty">No bad Adware apps were found!</string>
</resources>