<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="15dp">

    <ToggleButton
        android:id="@+id/webserver_fragment_toggle_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="webserverOnClick"
        android:textOff="@string/button_webserver_toggle_unchecked"
        android:textOn="@string/button_webserver_toggle_checked" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/button_webserver_toggle_text"
        android:textAppearance="@android:style/TextAppearance.Small" />

</LinearLayout>