<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerHorizontal="true">

    <android.support.design.widget.TabLayout
        android:id="@+id/lists_tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lists_tab_blacklist" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lists_tab_whitelist" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lists_tab_redirection_list" />
    </android.support.design.widget.TabLayout>

    <TextView
        android:id="@+id/lists_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/abs__ab_bottom_solid_dark_holo"
        android:paddingBottom="3dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="3dp"
        android:text="@string/checkbox_list_footer" />

    <LinearLayout
        android:id="@+id/lists_tabs_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/lists_footer"
        android:layout_below="@+id/lists_tabs"
        android:orientation="horizontal" />

</RelativeLayout>