<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:onClick="applyOnClick"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <FrameLayout
            android:id="@+id/status_layout"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="6dp"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/status_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                android:visibility="gone" />

            <ImageView
                android:id="@+id/status_icon"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/status_update"
                android:visibility="gone" />
        </FrameLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/status_layout"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/status_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:lines="1"
                android:scrollHorizontally="true"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:gravity="center_vertical"
                android:lines="1" />
        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/apply_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="applyOnClick"
        android:text="@string/button_apply" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/button_apply_text"
        android:textAppearance="@android:style/TextAppearance.Small" />

    <Button
        android:id="@+id/revert_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:onClick="revertOnClick"
        android:text="@string/button_revert" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:text="@string/button_revert_text"
        android:textAppearance="@android:style/TextAppearance.Small" />

</LinearLayout>
